fix vertical gap between sections

--- a/src/components/Claim/Claim.module.scss
+++ b/src/components/Claim/Claim.module.scss
@@ -10,12 +10,10 @@
     'title inputs'
     'title button'
     'title annotation';
-  padding: 160px 0 120px;
 
   @media (width <= 768px) {
     display: flex;
     flex-direction: column;
-    padding: 80px 0;
   }
 }
 
