--- a/src/components/Widget/Widget.module.scss
+++ b/src/components/Widget/Widget.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   gap: 160px;
-  padding: 118px 0;
   position: relative;
 
   .grid-background {
@@ -52,7 +51,6 @@
 
   @media (width <= 768px) {
     gap: 80px;
-    padding: 80px 0;
   }
 
   .widget-text-container {
